# demo_exam

./: .gitignore  avoska.db  docker-compose.yml  pyproject.toml  start.sh
src/: Dockerfile  config.py  database.py  dependencies.py  main.py  schemas.py
src/api/: base.py
src/dao/: orders_dao.py  product_dao.py  user_dao.py
src/models/: models.py
src/services/: login_serrvice.py  secrets.py
templates/: auth.html  base.html  create_orders.html  home.html  orders.html  register.html
